force-app/main/default/objects/User/fields/Filial__c.field-meta.xml
<CustomField>
    <fullName>Filial__c</fullName>
    <label>Filial</label>
    <type>TextArea</type>
</CustomField>