force-app/main/default/objects/User/fields/Salesforce_Team__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Team__c</fullName>
    <label>Salesforce Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrator</fullName>
                <color>#00CCCC</color>
                <label>Administrator</label>
            </value>
            <value>
                <fullName>Commercial Planning</fullName>
                <color>#FF99FF</color>
                <label>Commercial Planning</label>
            </value>
            <value>
                <fullName>Commnunity</fullName>
                <color>#009900</color>
                <label>Commnunity</label>
            </value>
            <value>
                <fullName>External Community</fullName>
                <color>#33CC00</color>
                <label>External Community</label>
            </value>
            <value>
                <fullName>Sales - Iodine</fullName>
            </value>
            <value>
                <fullName>Sales_Lithium</fullName>
                <color>#6600CC</color>
                <label>Sales - Lithium</label>
            </value>
            <value>
                <fullName>Sales - Pricing</fullName>
            </value>
            <value>
                <fullName>Service - Iodine</fullName>
            </value>
            <value>
                <fullName>Service_Lithium</fullName>
                <color>#FF9900</color>
                <label>Service - Lithium</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>Technology</fullName>
                <color>#0B24BE</color>
                <label>Technology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>