force-app/main/default/objects/User/fields/Yodo__c.field-meta.xml
<CustomField>
    <fullName>Yodo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yodo</label>
    <type>Checkbox</type>
</CustomField>